mula_proc_macro/tests/03-multiple-inputs.stderr
error: mula functions must accept a single argument
 --> $DIR/03-multiple-inputs.rs:4:1
  |
4 | fn mula_fn(i: i64, s: String) -> String {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
