mula_proc_macro/tests/03-multiple-inputs.rs
use mula_proc_macro::mula;

#[mula]
fn mula_fn(i: i64, s: String) -> String {
    String::new()
}

fn main() {}